# fastmcp-swagger

./: LICENSE  README.md  multi_mcp.py  pyproject.toml  single_mcp.py  test.ipynb
tool/: calculator_tool.py  test_tool.py
