[project]
name = "fastmcp-swagger"
version = "0.1.0"
description = ""
authors = [
    {name = "mic050r",email = "s2216@e-mirim.hs.kr"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic = "^2.5.0"
uvicorn = "^0.31.1"  
httpx = "0.28.1"
mcp = "1.12.4,<2.0.0"
fastmcp = "^2.12.2"
pandas = "^2.3.2"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
